<resources>
    <string name="app_name">Programming Quiz</string>
    <string name="quiz_count">Quiz : 60/1</string>
    <string name="question_text">Which space agency has decided to carry out first all-female spacewalk at the International space Station (ISS)?</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="next">next</string>
    <string name="test_category_java">Java</string>
    <string name="test_category_kotlin">Kotlin</string>
    <string name="test_category_c">C++</string>
    <string name="test_category_piton">Python</string>
    <string-array name="questions_java">
        <item>Who invented Java Programming?</item>
        <item>Which statement is true about Java?</item>
        <item>Which component is used to compile, debug and execute the java programs?</item>
        <item>Which one of the following is not a Java feature?</item>
        <item>Which of these cannot be used for a variable name in Java?</item>
        <item>What is the extension of java code files?</item>
        <item>Which environment variable is used to set the java path?</item>
        <item>Which of the following is not an OOPS concept in Java?</item>
        <item>What is not the use of “this” keyword in Java?</item>
        <item>Which of the following is a type of polymorphism in Java Programming?</item>
        <item>What is Truncation in Java?</item>
        <item>What is the extension of compiled java classes?</item>
        <item>Which exception is thrown when java is out of memory?</item>
        <item>Which of these are selection statements in Java?</item>
        <item>Which of these keywords is used to define interfaces in Java?</item>
        <item>Which of the following is a superclass of every class in Java?</item>
        <item>Which of the below is not a Java Profiler?</item>
        <item>Which of these packages contains the exception Stack Overflow in Java?</item>
        <item>Which one of the following is not an access modifier?</item>
        <item>What is the numerical range of a char data type in Java?</item>
    </string-array>
    <string-array name="questions_java_answers">
        <item>James Gosling</item>
        <item> Java is a platform-independent programming language</item>
        <item>JDK</item>
        <item>Use of pointers</item>
        <item>keyword</item>
        <item>.java</item>
        <item>JAVA_HOME</item>
        <item>Compilation</item>
        <item>Passing itself to the method of the same class</item>
        <item>Compile time polymorphism</item>
        <item>Floating-point value assigned to an integer type</item>
        <item>.class</item>
        <item>OutOfMemoryError</item>
        <item>if()</item>
        <item>interface</item>
        <item>Object class</item>
        <item>JVM</item>
        <item>java.lang</item>
        <item>Void</item>
        <item>0 to 65535</item>
    </string-array>
    <string-array name="question_variant_java_a">
        <item>Guido van Rossum</item>
        <item>Java is a sequence-dependent programming language</item>
        <item>JRE</item>
        <item>Object-oriented</item>
        <item>identifier and keyword</item>
        <item>.js</item>
        <item>MAVEN_Path</item>
        <item>Polymorphism</item>
        <item>Referring to the instance variable when a local variable has the same name</item>
        <item>Multiple polymorphism</item>
        <item>Floating-point value assigned to a Floating type</item>
        <item>.txt</item>
        <item>MemoryError</item>
        <item>break</item>
        <item>intf</item>
        <item>ArrayList</item>
        <item>JProfiler</item>
        <item>java.io</item>
        <item>Protected</item>
        <item>0 to 256</item>

    </string-array>
    <string-array name="question_variant_java_b">
        <item>James Gosling</item>
        <item>Java is a code dependent programming language</item>
        <item>JIT</item>
        <item>Use of pointers</item>
        <item>identifier</item>
        <item>.txt</item>
        <item>JavaPATH</item>
        <item>Inheritance</item>
        <item>Passing itself to the method of the same class</item>
        <item>Compile time polymorphism</item>
        <item>Floating-point value assigned to an integer type</item>
        <item>.js</item>
        <item>OutOfMemoryError</item>
        <item>continue</item>
        <item>Intf</item>
        <item>Abstract class</item>
        <item>Eclipse Profiler</item>
        <item>java.system</item>
        <item>Void</item>
        <item>-128 to 127</item>

    </string-array>
    <string-array name="question_variant_java_c">
        <item>Dennis Ritchie</item>
        <item>Java is a platform-dependent programming language</item>
        <item>JDK</item>
        <item>Portable</item>
        <item>keyword</item>
        <item>.class</item>
        <item>JAVA</item>
        <item>Compilation</item>
        <item>Passing itself to another method</item>
        <item>Multilevel polymorphism</item>
        <item>Integer value assigned to floating type</item>
        <item>.class</item>
        <item>MemoryOutOfBoundsException</item>
        <item>for()</item>
        <item>interface</item>
        <item>Object class</item>
        <item>JVM</item>
        <item>java.lang</item>
        <item>Public</item>
        <item>0 to 65535</item>
    </string-array>
    <string-array name="question_variant_java_d">
        <item>Bjarne Stroustrup</item>
        <item>Java is a platform-independent programming language</item>
        <item>JVM</item>
        <item>Dynamic and Extensible</item>
        <item>none of the mentioned</item>
        <item>.java</item>
        <item>JAVA_HOME</item>
        <item>Compilation</item>
        <item>Calling another constructor in constructor chaining</item>
        <item>Execution time polymorphism</item>
        <item>Integer value assigned to floating type</item>
        <item>.java</item>
        <item>MemoryFullException</item>
        <item>if()</item>
        <item>Interface</item>
        <item>String</item>
        <item>JConsole</item>
        <item>java.util</item>
        <item>Private</item>
        <item>0 to 32767</item>
    </string-array>
    <string-array name="question_kotlin">
        <item>What are Booleans?</item>
        <item>What is the meaning of HTML?</item>
        <item>What does AI mean?</item>
        <item>Why do we need abstract class?</item>
        <item>When you use a data class, what functions will the compiler automatically provide?</item>
        <item>What value is 10 until 12</item>
        <item>Elvis operator keyword?</item>
        <item> Which the right code to declare nullable variable in Kotlin?</item>
        <item>Which keyword used to create a mutable variable?</item>
        <item>Deklarasi variabel Kotlin yang bersifat immutable?</item>
        <item>Manakah OS di bawah ini yang Open Source?</item>
        <item>Mana yang lebih lama?</item>
        <item>Bahasa pemrograman apa saja yang bisa digunakan untuk mengembangkan aplikasi Android Native?</item>
        <item>How to write correct parameters in Kotlin?</item>
        <item>Would you like to become a programmer some day?</item>
        <item>What is Java used on?</item>
        <item>What is the best known programming language ever?</item>
        <item>Does programming pay you good money?</item>
        <item>Which of these can be used for programming?</item>
        <item>Which ways can you use for an HTML file?</item>


    </string-array>
    <string-array name="questions_kotlin_answers">
        <item>True and False</item>
        <item>Hypertext Markup Language</item>
        <item>Artificial Intelligence</item>
        <item>to avoid creating instances of the class</item>
        <item>copy(), equals, dan toString()</item>
        <item>10 11</item>
        <item>"?:"</item>
        <item>val text: String? = null</item>
        <item>var</item>
        <item>val</item>
        <item>Both A and B</item>
        <item>Objective C</item>
        <item>Both A and B</item>
        <item>fun sum(valueA: Int, valueB: Int)</item>
        <item>Yes</item>
        <item>All of above</item>
        <item>Java</item>
        <item>Both A and B</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="question_variant_kotlin_a">
        <item>A question</item>
        <item>Hypertext Making Language</item>
        <item>Artificial Intelligence</item>
        <item>to inherited values from other classes</item>
        <item>paste(), toDouble(), notEquals()</item>
        <item>10 11 12</item>
        <item>"?:"</item>
        <item>val text: String = null</item>
        <item>var</item>
        <item>val</item>
        <item>Android</item>
        <item>Swift</item>
        <item>Java</item>
        <item>fun sum(Int: ValueA, Int: valueB)</item>
        <item>Definitely</item>
        <item>Wifi Routers</item>
        <item>Python</item>
        <item>Yes, programming pays good money.</item>
        <item>Python</item>
        <item>.htm</item>
    </string-array>
    <string-array name="question_variant_kotlin_b">
        <item>True and False</item>
        <item>Hightext Markup Language</item>
        <item>Artificial Interrogation</item>
        <item>to avoid creating instances of the class</item>
        <item>equals(), copy, dan toInt()</item>
        <item>10 11</item>
        <item>"??"</item>
        <item>val text: String? = null</item>
        <item>val</item>
        <item>var</item>
        <item>Linux</item>
        <item>Objective C</item>
        <item>Kotlin</item>
        <item>fun sum(Int ValueA, Int valueB)</item>
        <item>Yes</item>
        <item>Blu-Ray Players</item>
        <item>Kotlin</item>
        <item>No, people make more money by making burgers.</item>
        <item>HTML</item>
        <item>.html</item>
    </string-array>
    <string-array name="question_variant_kotlin_c">
        <item>A decision</item>
        <item>Hypertext Markup Language</item>
        <item>--</item>
        <item>to not inherit values from other classes</item>
        <item>equals(), copy, dan toInt()</item>
        <item>11 12</item>
        <item>":?"</item>
        <item>val text: nullable = null</item>
        <item>const</item>
        <item>const</item>
        <item>Mac OS</item>
        <item>--</item>
        <item>PHP</item>
        <item>fun sum(valueA: Int, valueB: Int)</item>
        <item>Maybe</item>
        <item>Operating Systems</item>
        <item>Java</item>
        <item>--</item>
        <item>JavaScript</item>
        <item>.tml</item>
    </string-array>
    <string-array name="question_variant_kotlin_d">
        <item>Percents</item>
        <item>--</item>
        <item>--</item>
        <item>to create an instance of the class</item>
        <item>copy(), equals, dan toString()</item>
        <item>All is wrong!</item>
        <item>"?."</item>
        <item>val text: String</item>
        <item>mutable</item>
        <item>final</item>
        <item>Both A and B</item>
        <item>fun sum(valueA Int, valueB Int)</item>
        <item>No</item>
        <item>All of above</item>
        <item>Ruby</item>
        <item>--</item>
        <item>All of above</item>
        <item>Both A and B</item>
        <item>---</item>
        <item>---</item>
    </string-array>
    <string name="_03_00_min">03:00 min</string>
    <string name="java">java</string>
</resources>